Reimplementing pickers wip

--- a/src/main/resources/templates/kinds.html
+++ b/src/main/resources/templates/kinds.html
@@ -7,7 +7,7 @@
 			content="Start your next web project with Pure." />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<title>Get Started &ndash; Pure</title>
+		<title>Entities - velvetdb</title>
 		
 		<link rel="stylesheet"
 			href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />	
@@ -15,7 +15,7 @@
 		
 	<body>
 	
-		<h1>Kinds</h1>
+		<h4>Entities</h4>
 		<table class="pure-table pure-table-bordered">
 				
 			<tr th:each="kind : ${kinds}">
