--- a/src/main/resources/templates/kind.html
+++ b/src/main/resources/templates/kind.html
@@ -3,17 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title th:text="${kind} + ' velvetdb'">kind - velvetdb</title>		
+		<title th:text="${kind} + ' - velvetdb'">kind - velvetdb</title>		
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />	
 	</head>
 		
 	<body>
-	
 			
-		<h4><a href="${it.rootUrl}">All Kinds</a> &gt; <span th:text="${kind}">kind</span></h4>
+		<h4><a href="/" th:href="${rootUrl}">Entities</a> &gt; <span th:text="${kind}">kind</span></h4>
 		
 		<p>
-			Shown records <span th:text = "${offset} + 1" >101</span> - <span th:text="${offset} + ${limit}">200</span> of <span th:text="${total}"></span> 
+			Shown records <span th:text = "${offset} + 1" >101</span> - <span th:text="${lastIndex}">200</span> of <span th:text="${total}"></span> 
 		</p>
 
 		<table class="pure-table pure-table-bordered">
