--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title th:text="${kind} + ' velvetdb'">kind - velvetdb</title>		
+		<title th:text="${kind} + ' - ' + ${key} + ' - velvetdb'">kind - 12 - velvetdb</title>		
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
 		
 		<script type="text/javascript" src="http://code.jquery.com/jquery.min.js" charset="utf-8"></script>	
@@ -12,10 +12,9 @@
 		
 	<body>
 	
-			
 		<form method="post" action="${it.submitUrl}" enctype="application/x-www-form-urlencoded" >
 				
-		<h4><a href="/">All Kinds</a> &gt; <a href="${it.kindUrl}${it.kind}" th:text="${kind}">kind</a>  &gt; <span th:text="${key}">key</span></h4>
+		<h4><a href="/" th:href="${rootUrl}">Entities</a> &gt; <a href="/kind/passport" th:href="'/kind/' + ${kind}" th:text="${kind}"></a>  &gt; <span th:text="${key}">key</span></h4>
 		
 		<table class="pure-table pure-table-bordered">
 			<tbody>
@@ -36,33 +35,29 @@
 		<p>Linx</p>
 		
 		<div th:each="singleLink : ${singleLinks}" >
-		  <p th:text="${singleLink.edgeKind} + ' ' + ${singleLink.kind}">edgeKind kind 
-		  
-		  <c:choose>
-		    <c:when test="${singleLink.picker != ''}">
-		      <form method="post" action="${it.pickLinkUrl}" enctype="application/x-www-form-urlencoded" >
-			     <select name="parentKey">
-			  	   <c:forEach var="key" items="${singleLink.picker.keys}">
-			  	     <c:choose>	       
-			  	       <c:when test="${singleLink.value.equals(key)}">
-			  	         <option value="${key}" selected="selected">${key}</option>
-			  	       </c:when>
-			  	       <c:otherwise>
-			  	         <option value="${key}">${key}</option>
-			  	       </c:otherwise>
-			  		 </c:choose>	       	       	  	          
-			  	   </c:forEach>
-			  	 </select>
-			  	 <input type="hidden" name="parentLinkKind" value="${singleLink.picker.parentLinkKind}" />
-			  	 <input type="hidden" name="kind" value="${it.kind}" />
-			  	 <input type="hidden" name="key" value="${it.key}" />
+		  <p>
+			  <b><span th:text="${singleLink.edgeKind}" /></b>
+			  <!-- (<span th:text="${singleLink.kind}" />) -->
+			  
+			   <a th:if="${!singleLink.value.isEmpty()}"
+		        th:href="${rootUrl} + 'record/' +  ${singleLink.kind} + '/' + ${singleLink.value}"
+		        th:text="${singleLink.value}">linkkey</a>
+		        
+		       <span th:if="${singleLink.value.isEmpty()}">[-]</span>		        
+		        
+		    
+		      <form th:if="${singleLink.picker != null}" method="post" action="/pick" enctype="application/x-www-form-urlencoded" >
+			     <select name="parentKey" th:field="${singleLink.value}">
+			     	<option th:each="candidate : ${singleLink.picker}" th:value="${candidate.key}" th:text="${candidate.key}" >child key</option>			  	   
+			  	 </select>			  	 
+			  	 <input type="hidden" name="edgeKind" th:value="${singleLink.kind}" />			  	 
+			  	 <input type="hidden" name="key" th:value="${key}" />
 			     <input type="submit" value="Save" />
 			  </form> 
-		    </c:when>	    
-		  </c:choose>
 		  
-		  <c:choose>
-		  	<c:when test="${singleLink.value.equals('')}">	  		
+		  
+		  
+		  	<div th:if="${singleLink.value.equals('')}">  		
 		      <form method="post" action="${it.newRecordUrl}/${singleLink.kind}" enctype="application/x-www-form-urlencoded" >
 		      	<c:if test="${singleLink.needsKey}">
 		        	<input type="text" name="key" value="" />
@@ -71,11 +66,11 @@
 		        <input type="hidden" name="linkEdgeKind" value="${singleLink.edgeKind}" />
 		      	<input type="submit" value="+" />
 		      </form>	      
-		     </c:when>
-		     <c:otherwise>	      
-		         <a href="${it.editUrl}/${singleLink.kind}/${singleLink.value}">${singleLink.needsKey ? singleLink.value : "[autokey]"}</a>	         
-		     </c:otherwise>
-		  </c:choose>
+		     </div>
+		     
+		     	      
+		    
+		     
 		  
 		  </p>
 		  
